examples/elk-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk-kibana
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:   
  - host: kibana.develop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elk-kibana
            port:
              number: 5601
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk-es
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:   
  - host: es.develop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elk-client
            port:
              number: 9200
